--- a/new 1.html
+++ b/new 1.html
@@ -17,6 +17,6 @@ Videokartyak
 <font color="#731400">
 <font size="60">Kártyatípusok</font> </br>
 <br><font size="5"> -alaplapra integrált (fizikailag nem eltávolítható, többnyire lehetőség van letiltásra)</font></br> 
-<br><font size="5">-bővítőkártyás rendszerű (cserélhető)</font><a href="file:///C:/Users/hrodii/Desktop/HTML/new%202.html">Tovabb</a></br> 
+<br><font size="5">-bővítőkártyás rendszerű (cserélhető)</font><a href="new 2.html">Tovabb</a></br> 
 <footer> Készitette: Pakulár Róbert </footer>
 </html>
