--- a/new 2.html
+++ b/new 2.html
@@ -20,9 +20,9 @@ Kártyatípusok
 <br><font size="6">Két nagy típus:</font></br>
 <br><font size="5">-NVidia SLI</font></br>
 <br><font size="5">-AMD CrossFire, vagy a modernebb CrossFire X</font></br>
-<a href="file:///C:/Users/hrodii/Desktop/HTML/new%203.html"/>
+<a href="new 3.html"/>
 <img src="NVIDA.jpg" alt="SLI" style="width:320px;height:230px;"></a>
-<a href="file:///C:/Users/hrodii/Desktop/HTML/new%204.html"/>
+<a href="new 4.html"/>
 <img src="AMD.jpg" alt="SLI" style="width:310px;height:230px;"></a>
 <footer> Készitette: Pakulár Róbert </footer>
 </html>
